--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "air" # "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -107,9 +107,9 @@ analytics:
 # Site Author
 author:
   name             : "Mikhail Surtsukov"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : ""
-  location         : "Moscow"
+  avatar           : "/assets/images/avatar.jpg"
+  bio              : "I am Deep Learning enthusiast especially interested in Bayesian Deep Learning and Deep Variational Inference"
+  location         : "Moscow, Russia"
   email            : "msurtsukov@gmail.com"
   links:
     - label: "Email"
